Restructure config and fix resize on mobile

--- a/src/assets/styles/config/_boilerplate.scss
+++ b/src/assets/styles/config/_boilerplate.scss
@@ -6,18 +6,23 @@
 .rp-wrapper {
     iframe {
         position: absolute;
-        top: 44px;
+        top: 0;
         bottom: 0;
         left: 0;
         right: 0;
         margin: auto;
         height: 100vh;
         width: 100%;
-        min-width: 450px;
+        min-width: 100%;
         border: 0;
         margin: 0 auto;
         background-color: #fff;
-        transition: width 700ms ease;
+        transition: max-width 700ms ease;
+
+        @include media-query(m) {
+            top: 44px;
+            min-width: 450px;
+        }
     }
 }
 
@@ -40,8 +45,18 @@
         color: #fff;
         cursor: pointer;
         font-size: 12px;
-        border-radius: 0;
+        border-radius: 5px;
         transition: all 300ms ease;
+        line-height: 1.6;
+        display: none;
+
+        @include media-query(m) {
+            display: inline;
+        }
+
+        &--debug {
+            display: inline;
+        }
 
         .dbp-debug & {
             outline: 0 !important;
@@ -57,4 +72,11 @@
             color: #333;
         }
     }
+}
+
+.dbp-logo {
+    height: 26px;
+    float: left;
+    margin-left: 20px;
+    fill: #fff;
 }
